<?xml version="1.0"?>
<package format="2">
  <name>yak_msgs</name>
  <version>0.1.0</version>
  <description>
    Message and services definitions used by the example YAK ros nodes.
    They are defined in a separate package so that users without access to
    CUDA can build 'filler' nodes to emulate the YAK node's ROS interface.
  </description>
  <author email="Joseph.Schornak@SwRI.org">Joseph Schornak</author>
  <author>Jonathan Meyer</author>
  <author email="david.merz@swri.org">David Merz, Jr.</author>
  <maintainer email="david.merz@swri.org">David Merz, Jr.</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
